<resources>
    <string name="app_name">AplikasiGithubUser</string>
    <string name="title_settings">Settings</string>
    <string name="title_github_users">Github User\'s Search</string>
    <string name="username">Username</string>
    <string name="hint_github">Masukkan Username GitHub</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="title_activity_detail_git_hub_user">DetailGitHubUserActivity</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="favorite_page">Favorite Page</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="title_favorite_github">Favorite GitHub User</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>