<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailGitHubUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_primaryContainer">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/title_github_users"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ProgressBar
                android:id="@+id/progressBarDetail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/tl_tabs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_github_users"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/username"
                android:textColor="#0f0f0f"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/followers"
                app:layout_constraintEnd_toStartOf="@+id/tv_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/following"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/followers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_followers"
                app:tabBackground="@drawable/tab_color_selector"
                app:tabSelectedTextColor="@color/md_theme_light_onPrimary"
                app:tabTextColor="@color/md_theme_light_primary" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_theme_light_onPrimary"
                android:contentDescription="@string/followers"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_tabs" />

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/vp_tabs"
                app:layout_constraintEnd_toEndOf="@+id/vp_tabs"
                app:layout_constraintStart_toStartOf="@+id/vp_tabs"
                app:layout_constraintTop_toBottomOf="@+id/tl_tabs" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:fabSize="normal"
        android:src="@drawable/baseline_favorite_border_24_white"
        android:contentDescription="@string/add_to_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>